--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700;900&family=Montserrat:wght@300;500&family=Outfit:wght@300;400;600&family=Roboto:ital,wght@0,300;0,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700;900&family=Montserrat:wght@300;500&family=Outfit:wght@300;400;600&family=Roboto:ital,wght@0,300;0,700;1,900&display=swap");
 
 /* Box sizing rules */
 *,
@@ -24,8 +24,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -46,7 +46,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* A elements that don't have a class get default styles */
@@ -164,19 +164,25 @@ main > div > :nth-child(1) {
   gap: 10px;
 }
 
+.blog-card > img {
+  object-fit: contain;
+  width: 400px;
+}
+
+.description {
+  padding-inline: 6rem;
+  margin-top: 35px;
+}
+
 .post-details {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   padding: 35px;
   background-color: #3f3f46;
-
   min-height: 70vh;
   border-bottom: 1px solid whitesmoke;
-}
-.post-details > img {
-  width: 50%;
+  width: 100%;
 }
 
 #light .post-details {
@@ -185,6 +191,10 @@ main > div > :nth-child(1) {
 }
 p {
   font-size: 1.3rem;
+}
+.post-details > img {
+  height: 450px;
+  width: 85%;
 }
 
 .form-comment {
@@ -263,12 +273,6 @@ p {
   color: white;
 }
 
-.description > p {
-  margin: 0;
-  text-indent: 3ch;
-  text-align: left;
-}
-
 @media screen and (max-width: 700px) {
   .info-navigation {
     font-size: 1rem;
@@ -276,6 +280,10 @@ p {
     padding-bottom: 0;
     position: relative;
     padding: 0;
+  }
+
+  .post-details > img {
+    height: 250px;
   }
   .comments-container > div {
     width: 90%;
@@ -349,8 +357,13 @@ p {
     gap: 10px;
     font-size: 1.7rem;
   }
-  .post-details > img {
-    width: 90%;
+
+  .post-details {
+    padding: 15px;
+  }
+
+  .description {
+    padding: 1rem;
   }
 }
 
@@ -376,10 +389,6 @@ p {
     font-size: 0.5rem;
   }
 
-  .post-details > img {
-    width: 300px;
-    height: 200px !important;
-  }
   .post-details > :nth-child(3) {
     font-size: 0.6rem;
   }
@@ -387,12 +396,9 @@ p {
   .post-details > h1 {
     font-size: 1.2em;
   }
+
   .description {
-    text-align: center;
-  }
-  p {
-    width: 95%;
-    line-height: 1.2rem;
+    padding: 0rem;
   }
 }
 
