--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@
   padding: 0;
   margin: 0;
 }
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  text-align: justify;
+  background-color: #94a3b8;
+  padding: 10px;
+  border-radius: 8px;
+}
 
 /* Remove default margin */
 body,
@@ -170,7 +178,7 @@ main > div > :nth-child(1) {
 }
 
 .description {
-  padding-inline: 6rem;
+  padding-inline: 18rem;
   margin-top: 35px;
 }
 
@@ -178,7 +186,7 @@ main > div > :nth-child(1) {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 35px;
+  padding-inline: 35px;
   background-color: #3f3f46;
   min-height: 70vh;
   border-bottom: 1px solid whitesmoke;
@@ -273,6 +281,12 @@ p {
   color: white;
 }
 
+@media screen and (max-width: 1450px) {
+  .description {
+    padding-inline: 4rem;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .info-navigation {
     font-size: 1rem;
@@ -361,7 +375,6 @@ p {
   .post-details {
     padding: 15px;
   }
-
   .description {
     padding: 1rem;
   }
