--- a/src/App.css
+++ b/src/App.css
@@ -420,3 +420,9 @@ p {
 .spinner-container {
   min-height: 100vh;
 }
+
+.loading-message {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
